--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/mgreco1991/Friend-Finder-App-1/issues"
   },
-  "homepage": "https://github.com/mgreco1991/Friend-Finder-App-1#readme"
+  "homepage": "https://github.com/mgreco1991/Friend-Finder-App-1#readme",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2"
+  }
 }
